<resources>
    <string name="AudioTheme_summary">Change Habitica\'s Audio Theme</string>
    <string name="AudioTheme_title">Audio Theme</string>
    <string name="HP_default">Health</string>
    <string name="Language_summary">Change Habitica\'s language</string>
    <string name="Language_title">Language</string>
    <string name="LoginActivityName">Welcome</string>
    <string name="MP_default">Mana</string>
    <string name="PS_contact_title">Contact me</string>
    <string name="PS_settings_title">Settings</string>
    <string name="SP_APIToken">APIToken</string>
    <string name="SP_APIToken_summary">Your API Token</string>
    <string name="SP_APIToken_title">API Token</string>
    <string name="SP_userID">UserID</string>
    <string name="SP_userID_summary">Your User ID</string>
    <string name="SP_userID_title">User ID</string>
    <string name="XP_default">Experience</string>
    <string name="a_party_robe">A Party Robe</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_bugreport">Report a Bug</string>
    <string name="about_give_us_feedback">Send us Feedback!</string>
    <string name="about_habitica_open_source">Habitica is available as open source software on Github</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_me">About Me</string>
    <string name="about_rate_our_app">Rate our App</string>
    <string name="about_source_code">Source Code</string>
    <string name="about_title">About</string>
    <string name="academics">Academics</string>
    <string name="accept">Accept</string>
    <string name="accept_guild_invite">ACCEPT_GUILD_INVITE</string>
    <string name="accept_party_invite">ACCEPT_PARTY_INVITE</string>
    <string name="accept_quest_invite">ACCEPT_QUEST_INVITE</string>
    <string name="accepted">Accepted</string>
    <string name="account_info">Account Info</string>
    <string name="account_reset">Account Reset</string>
    <string name="achievement_title">You got an Achievement!</string>
    <string name="action_back">Back</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_continue">Continue</string>
    <string name="action_edit">Edit</string>
    <string name="action_end_challenge">End Challenge</string>
    <string name="action_refresh">Refresh</string>
    <string name="active">Active</string>
    <string name="active_world_boss">Active World Boss</string>
    <string name="add">Add</string>
    <string name="add_daily">Add Daily</string>
    <string name="add_email_and_password">Add Email and Password</string>
    <string name="add_habit">Add Habit</string>
    <string name="add_invites">Add Invites</string>
    <string name="add_local_authentication">Add Local Authentication</string>
    <string name="add_password">Add password</string>
    <string name="add_reward">Add Reward</string>
    <string name="add_tag">Add new Tag</string>
    <string name="add_task">Add Task</string>
    <string name="add_todo">Add To Do</string>
    <string name="added_social_auth">Added %s authentication</string>
    <string name="adjust_counter">Adjust Counter</string>
    <string name="adjust_streak">Adjust Streak</string>
    <string name="adventure_guide_description_new">Complete these objectives and you’ll earn &lt;b&gt;5 Achievements&lt;/b&gt; and &lt;font color=#EE9109&gt;&lt;b&gt;100 Gold&lt;/b&gt;&lt;/font&gt; once you’re done!</string>
    <string name="advocacy_causes">Advocacy + Causes</string>
    <string name="ago_1Minute">1m ago</string>
    <string name="ago_1day">1d ago</string>
    <string name="ago_1hour">1h ago</string>
    <string name="ago_1month">1 month ago</string>
    <string name="ago_1week">1w ago</string>
    <string name="ago_days">%dd ago</string>
    <string name="ago_hours">%dh ago</string>
    <string name="ago_minutes">%dm ago</string>
    <string name="ago_months">%d months ago</string>
    <string name="ago_weeks">%dw ago</string>
    <string name="all">All</string>
    <string name="all_dailies_completed">You completed all your dailies. Well done!</string>
    <string name="all_tasks_completed">You completed all your tasks. Well done!</string>
    <string name="allocated">Allocated</string>
    <string name="allocating_points">Allocating Points</string>
    <string name="amazon">Amazon</string>
    <string name="amplitude_app_id" />
    <string name="androidx_startup">androidx.startup</string>
    <string name="api">API</string>
    <string name="apitoken_summary">Copy Token. Be careful, this is a password!</string>
    <string name="app_settings">App Settings</string>
    <string name="apple">Apple</string>
    <string name="confirm_username">Confirm Username</string>
    <string name="copy_tasks_description">Show assigned and open tasks on your personal task lists</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="day_start_adjustment">Day Start Adjustment</string>
    <string name="delete_account">Delete Account</string>
    <string name="disablePrivateMessages">Disable Private Messages</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="emails">Email Notifications</string>
    <string name="facebook">Facebook</string>
    <string name="fix_character_values">Fix Character Values</string>
    <string name="google">Google</string>
    <string name="group_plan_settings">Group Plan Settings</string>
    <string name="launch_screen">Launch Screen</string>
    <string name="login_methods">Login Methods</string>
    <string name="logout">Logout</string>
    <string name="maintenance">Maintenance</string>
    <string name="my_account">My Account</string>
    <string name="password">Password</string>
    <string name="photo_url">Photo URL</string>
    <string name="pref_account_header">Account</string>
    <string name="pref_emails_checkbox">Use Email Notifications</string>
    <string name="pref_first_day_of_the_week_key">FirstDayOfTheWeek</string>
    <string name="pref_first_day_of_the_week_summary">First day of the week in all calendars</string>
    <string name="pref_first_day_of_the_week_title">First Day of the Week</string>
    <string name="pref_push_notifications_checkbox">Use Push Notifications</string>
    <string name="pref_reminder_checkbox">Activate Reminder</string>
    <string name="pref_reminder_header">Daily Reminder</string>
    <string name="pref_reminder_picker">Set Reminder Time</string>
    <string name="preference_email_kicked_group">Kicked from group</string>
    <string name="preference_email_onboarding">Guidance with setting up your Habitica Account</string>
    <string name="preference_email_subscription_reminder">Subscription Reminders</string>
    <string name="preference_push_gifted_gems">Gifted Gems</string>
    <string name="preference_push_gifted_subscription">Gifted Subscription</string>
    <string name="preference_push_important_announcements">Important Announcements</string>
    <string name="preference_push_invited_to_group_plan">Invited to Group Plan</string>
    <string name="preference_push_invited_to_guild">Invited to Guild</string>
    <string name="preference_push_invited_to_party">Invited to Party</string>
    <string name="preference_push_invited_to_quest">Invited to Quest</string>
    <string name="preference_push_joined_group_plan_mention">@Mentions in Group Plans</string>
    <string name="preference_push_party_activity">Party Activity</string>
    <string name="preference_push_party_mention">@Mentions in Party</string>
    <string name="preference_push_received_a_private_message">Received a Private Message</string>
    <string name="preference_push_you_won_challenge">You won a Challenge!</string>
    <string name="preference_push_your_quest_has_begun">Your Quest has Begun</string>
    <string name="public_profile">Public Profile</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="push_notifications_sum">Set your push notifications settings</string>
    <string name="quest_mechanics">Quest Mechanics</string>
    <string name="quest_mechanics_boss_description">Complete any type of task or use skills to rack up pending damage! Damage will be applied on your next day reset. Strength affects how much damage you do.</string>
    <string name="quest_mechanics_boss_title">Damaging a Boss</string>
    <string name="quest_mechanics_collecting_description">When on a Collection Quest, complete your tasks for a random chance to find a Quest item. Pending items will be applied on your next day reset. Perception boosts item rates.</string>
    <string name="quest_mechanics_collecting_title">Collecting Quest items</string>
    <string name="quest_mechanics_damage_description">Boss damage is calculated each time a Party member checks in throughout the day. This damage is applied the next time you perform an action that syncs with the server. Boss damage is recorded in your Party’s chat.</string>
    <string name="quest_mechanics_damage_title">Bosses lash out for missed Dailies</string>
    <string name="quest_mechanics_pausing_description">If you’re struggling to complete your Dailies, you can pause damage from Settings for a break. This will prevent the Boss from hurting you or others, but also pause your own damage. Other members missed Dailies will still cause damage, so be careful out there! </string>
    <string name="quest_mechanics_pausing_title">Pausing damage</string>
    <string name="quest_mechanics_rage_description">Some difficult bosses have an orange Rage meter under their HP. This meter fills up when participants miss Dailies. When it fills completely, the boss will let out a fearsome attack that does extra damage!</string>
    <string name="quest_mechanics_rage_title">Rage meters</string>
    <string name="reload_content">Reload Content</string>
    <string name="reset_account">Reset Account</string>
    <string name="server">Server</string>
    <string name="task_display">Task list display</string>
    <string name="theme_color">Theme Color</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="username">Username</string>
</resources>