<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/pref_account_header"
        android:key="account_prefs">
        <PreferenceScreen
            android:layout="@layout/preference_child_summary"
            android:title="@string/my_account"
            android:key="my_account">
            <PreferenceCategory
                android:layout="@layout/preference_category"
                android:title="@string/account_info"
                android:key="account_info">
                <Preference
                    android:persistent="false"
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/username"
                    android:selectable="true"
                    android:key="username"
                    android:shouldDisableView="false"/>
                <Preference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/confirm_username"
                    android:key="confirm_username"
                    app:isPreferenceVisible="false"/>
                <Preference
                    android:persistent="false"
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/email"
                    android:selectable="true"
                    android:key="email"
                    android:shouldDisableView="false"/>
            </PreferenceCategory>
            <PreferenceCategory
                android:layout="@layout/preference_category"
                android:title="@string/login_methods"
                android:key="account_info">
                <com.habitrpg.android.habitica.ui.views.ExtraLabelPreference
                    android:layout="@layout/preference_button"
                    android:title="@string/password"
                    android:key="password"/>
                <com.habitrpg.android.habitica.ui.views.ExtraLabelPreference
                    android:layout="@layout/preference_button"
                    android:title="@string/google"
                    android:key="google_auth"/>
                <com.habitrpg.android.habitica.ui.views.ExtraLabelPreference
                    android:title="@string/facebook"
                    android:key="facebook_auth"/>
                <com.habitrpg.android.habitica.ui.views.ExtraLabelPreference
                    android:title="@string/apple"
                    android:key="apple_auth"/>
            </PreferenceCategory>
            <PreferenceCategory
                android:layout="@layout/preference_category"
                android:title="@string/public_profile"
                android:key="public_profile">
                <Preference
                    android:persistent="false"
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/display_name"
                    android:key="display_name"/>
                <Preference
                    android:persistent="false"
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/about_me"
                    android:key="about"/>
                <Preference
                    android:persistent="false"
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/photo_url"
                    android:key="photo_url"/>
            </PreferenceCategory>
            <PreferenceCategory
                android:layout="@layout/preference_category"
                android:title="@string/api"
                android:key="api">
                <Preference
                    android:persistent="false"
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/SP_userID_title"
                    android:selectable="true"
                    android:key="@string/SP_userID"
                    android:shouldDisableView="false"/>
                <Preference
                    android:persistent="false"
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/SP_APIToken_title"
                    android:selectable="true"
                    android:key="@string/SP_APIToken"
                    android:summary="@string/apitoken_summary"
                    android:shouldDisableView="false"/>
                <Preference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/fix_character_values"
                    app:key="fixCharacterValues"/>
            </PreferenceCategory>
            <PreferenceCategory
                android:layout="@layout/preference_category"
                android:title="@string/danger_zone">
                <Preference
                    android:persistent="false"
                    android:layout="@layout/preference_child_summary_danger"
                    android:title="@string/reset_account"
                    android:key="reset_account"/>
                <Preference
                    android:persistent="false"
                    android:layout="@layout/preference_child_summary_danger"
                    android:title="@string/delete_account"
                    android:key="delete_account"/>
            </PreferenceCategory>
        </PreferenceScreen>
        <Preference
            android:layout="@layout/preference_child_summary"
            android:key="pause_damage"/>
        <Preference
            android:layout="@layout/preference_child_summary"
            android:key="choose_class"
            app:isPreferenceVisible="false"/>
        <Preference
            android:layout="@layout/preference_child_summary_danger"
            android:title="@string/logout"
            android:key="logout"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/app_settings">
        <ListPreference
            android:entries="@array/TaskDisplayTypes"
            android:layout="@layout/preference_child_summary"
            android:title="@string/task_display"
            android:key="task_display"
            android:defaultValue="standard"
            android:entryValues="@array/TaskDisplayValues"/>
        <ListPreference
            android:entries="@array/launch_screen_types"
            android:layout="@layout/preference_child_summary"
            android:title="@string/launch_screen"
            android:key="launch_screen"
            android:defaultValue="/user/tasks/habits"
            android:entryValues="@array/launch_screen_values"/>
        <ListPreference
            android:entries="@array/Language"
            android:layout="@layout/preference_child_summary"
            android:title="@string/Language_title"
            android:key="language"
            android:summary="@string/Language_summary"
            android:entryValues="@array/LanguageValues"/>
        <ListPreference
            android:entries="@array/AudioThemes"
            android:layout="@layout/preference_child_summary"
            android:title="@string/AudioTheme_title"
            android:key="audioTheme"
            android:summary="@string/AudioTheme_summary"
            android:entryValues="@array/AudioValues"/>
        <ListPreference
            android:entries="@array/AppThemes"
            android:layout="@layout/preference_child_summary"
            android:title="@string/theme_color"
            android:key="theme_name"
            android:defaultValue="purple"
            android:entryValues="@array/AppThemeValues"/>
        <ListPreference
            android:entries="@array/AppThemeModes"
            android:layout="@layout/preference_child_summary"
            android:title="@string/theme_mode"
            android:key="theme_mode"
            android:defaultValue="system"
            android:entryValues="@array/AppThemeModeValues"/>
        <CheckBoxPreference
            android:layout="@layout/preference_child_summary"
            android:title="@string/disablePrivateMessages"
            android:key="disablePMs"/>
        <ListPreference
            android:entries="@array/weekdays"
            android:layout="@layout/preference_child_summary"
            android:title="@string/pref_first_day_of_the_week_title"
            android:key="@string/pref_first_day_of_the_week_key"
            android:summary="@string/pref_first_day_of_the_week_summary"
            android:entryValues="@array/weekdayValues"/>
        <com.habitrpg.android.habitica.ui.views.HabiticaListPreference
            android:entries="@array/cds_labels"
            android:layout="@layout/preference_child_summary"
            android:title="@string/day_start_adjustment"
            android:key="cds_time"
            android:entryValues="@array/cds_values"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/group_plan_settings"
        android:key="groups_category"
        app:isPreferenceVisible="false">
        <Preference
            android:layout="@layout/preference_group_footer"
            android:title="@string/copy_tasks_description"
            android:key="groups_footer"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/pref_reminder_header">
        <CheckBoxPreference
            android:layout="@layout/preference_child_summary"
            android:title="@string/pref_reminder_checkbox"
            android:key="use_reminder"
            android:defaultValue="false"/>
        <com.habitrpg.android.habitica.prefs.TimePreference
            android:layout="@layout/preference_child_summary"
            android:title="@string/pref_reminder_picker"
            android:key="reminder_time"
            android:defaultValue="19:30"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/push_notifications">
        <CheckBoxPreference
            android:layout="@layout/preference_child_summary"
            android:title="@string/pref_push_notifications_checkbox"
            android:key="usePushNotifications"
            android:defaultValue="true"/>
        <PreferenceScreen
            android:layout="@layout/preference_child_summary"
            android:title="@string/push_notifications"
            android:key="pushNotifications"
            android:summary="@string/push_notifications_sum">
            <PreferenceCategory
                android:layout="@layout/preference_category"
                android:title="Push Notifications">
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_you_won_challenge"
                    android:key="preference_push_you_won_challenge"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_received_a_private_message"
                    android:key="preference_push_received_a_private_message"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_gifted_gems"
                    android:key="preference_push_gifted_gems"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_gifted_subscription"
                    android:key="preference_push_gifted_subscription"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_invited_to_party"
                    android:key="preference_push_invited_to_party"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_invited_to_group_plan"
                    android:key="preference_push_invited_to_guild"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_your_quest_has_begun"
                    android:key="preference_push_your_quest_has_begun"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_invited_to_quest"
                    android:key="preference_push_invited_to_quest"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_important_announcements"
                    android:key="preference_push_important_announcements"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_party_activity"
                    android:key="preference_push_party_activity"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_party_mention"
                    android:key="preference_push_party_mention"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_joined_group_plan_mention"
                    android:key="preference_push_joined_guild_mention"
                    android:defaultValue="true"/>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/emails">
        <CheckBoxPreference
            android:layout="@layout/preference_child_summary"
            android:title="@string/pref_emails_checkbox"
            android:key="useEmails"
            android:defaultValue="true"/>
        <PreferenceScreen
            android:layout="@layout/preference_child_summary"
            android:title="@string/emails"
            android:key="emailNotifications">
            <PreferenceCategory
                android:layout="@layout/preference_category"
                android:title="@string/emails">
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_you_won_challenge"
                    android:key="preference_email_you_won_challenge"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_email_onboarding"
                    android:key="preference_email_onboarding"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_received_a_private_message"
                    android:key="preference_email_received_a_private_message"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_gifted_gems"
                    android:key="preference_email_gifted_gems"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_gifted_subscription"
                    android:key="preference_email_gifted_subscription"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_invited_to_party"
                    android:key="preference_email_invited_to_party"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_invited_to_guild"
                    android:key="preference_email_invited_to_guild"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_email_kicked_group"
                    android:key="preference_email_kicked_group"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_your_quest_has_begun"
                    android:key="preference_email_your_quest_has_begun"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_invited_to_quest"
                    android:key="preference_email_invited_to_quest"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_push_important_announcements"
                    android:key="preference_email_important_announcements"
                    android:defaultValue="true"/>
                <CheckBoxPreference
                    android:layout="@layout/preference_child_summary"
                    android:title="@string/preference_email_subscription_reminder"
                    android:key="preference_email_subscription_reminder"
                    android:defaultValue="true"/>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/maintenance">
        <Preference
            android:layout="@layout/preference_child_summary"
            android:title="@string/reload_content"
            android:key="reload_content"/>
        <ListPreference
            android:entries="@array/server_urls"
            android:layout="@layout/preference_child_summary"
            android:title="@string/server"
            android:key="server_url"
            android:entryValues="@array/server_urls"/>
    </PreferenceCategory>
</PreferenceScreen>
