<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/spacing_xlarge"
    android:layout_marginTop="@dimen/spacing_large"
    android:layout_marginRight="@dimen/spacing_xlarge"
    android:layout_marginBottom="@dimen/spacing_large">
    <TextView
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/quest_mechanics"
        android:textAlignment="center"
        style="@style/ArmoireTitleTextView"/>
    <TextView
        android:textColor="@color/text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quest_mechanics_boss_title"
        style="@style/ArmoireSubHeader"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/quest_mechanics_boss_description"
        style="@style/ArmoireDescriptionTextView"/>
    <TextView
        android:textColor="@color/text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quest_mechanics_collecting_title"
        style="@style/ArmoireSubHeader"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/quest_mechanics_collecting_description"
        style="@style/ArmoireDescriptionTextView"/>
    <TextView
        android:textColor="@color/text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quest_mechanics_damage_title"
        style="@style/ArmoireSubHeader"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/quest_mechanics_damage_description"
        style="@style/ArmoireDescriptionTextView"/>
    <TextView
        android:textColor="@color/text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quest_mechanics_pausing_title"
        style="@style/ArmoireSubHeader"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/quest_mechanics_pausing_description"
        style="@style/ArmoireDescriptionTextView"/>
    <TextView
        android:textColor="@color/text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quest_mechanics_rage_title"
        style="@style/ArmoireSubHeader"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quest_mechanics_rage_description"
        style="@style/ArmoireDescriptionTextView"/>
</LinearLayout>
